--- a/public/admin.html
+++ b/public/admin.html
@@ -27,7 +27,7 @@
   <div id="artworks-list"></div>
 
   <script>
-    const API_URL = 'https://sitoform25.onrender.com/api/artworks'; // Replace with your Render URL
+    const API_URL = 'https://sitoform25.onrender.com/api/artworks';
     const TOKEN = 'my-secret-token';
 
     async function loadArtworks() {
